# H5_Cache_Optimization

./: .clangd  .gitignore  .mxproject  CMakeLists.txt  H5_Cache_Benchmark.ioc
.cache/clangd/index/: cmsis_compiler.h.231860C158DBD01E.idx  cmsis_gcc.h.82613CE4E7CCC594.idx  cmsis_version.h.394FB5C58C128CDA.idx  core_cm33.h.953EE528175F6F69.idx  main.c.7B3F538781454EE7.idx  main.h.CA38928408A4D36D.idx  mpu_armv8.h.EABE1BAEB20BCC36.idx  stm32_hal_legacy.h.0EC0FFA54F6BB7D8.idx  stm32h533xx.h.32E501ECEBDE8150.idx  stm32h5xx.h.4214F271DD5E472C.idx  stm32h5xx_hal.c.AE61EB7464D3F930.idx  stm32h5xx_hal.h.3CE1AB62850739AF.idx  stm32h5xx_hal_conf.h.C6ED5DC41D2EBAC2.idx  stm32h5xx_hal_cortex.c.3EA63A79D0CEB0A1.idx  stm32h5xx_hal_cortex.h.61020A2685A34736.idx  stm32h5xx_hal_dcache.c.1362D37D148948E0.idx  stm32h5xx_hal_dcache.h.8A6A8FF883894C94.idx  stm32h5xx_hal_def.h.3286056EA43D87BE.idx  stm32h5xx_hal_dma.c.5F7C6E081C64AB1A.idx  stm32h5xx_hal_dma.h.D09C2DEDF3A0A9D0.idx  stm32h5xx_hal_dma_ex.c.2CD569DCC2840288.idx  stm32h5xx_hal_dma_ex.h.C044667C0FA6574D.idx  stm32h5xx_hal_exti.c.4B4A7C8A9D226C22.idx  stm32h5xx_hal_exti.h.E4632CFD9874E2CD.idx  stm32h5xx_hal_flash.c.073F60A14955F179.idx  stm32h5xx_hal_flash.h.F9277946762DF7ED.idx  stm32h5xx_hal_flash_ex.c.B66B338BBC61BE37.idx  stm32h5xx_hal_flash_ex.h.6FE0EDE21F64321F.idx  stm32h5xx_hal_gpio.c.EB402881ACDAA4F4.idx  stm32h5xx_hal_gpio.h.A1F76EAA484F030A.idx  stm32h5xx_hal_gpio_ex.h.3DCF63EA7EA7C044.idx  stm32h5xx_hal_icache.c.1874B63CA1AED86C.idx  stm32h5xx_hal_icache.h.2DACC0FB35CDDB13.idx  stm32h5xx_hal_msp.c.D3649C7D25D2793C.idx  stm32h5xx_hal_pwr.c.4777CEBF6E8C7724.idx  stm32h5xx_hal_pwr.h.9B51F3E5D5584895.idx  stm32h5xx_hal_pwr_ex.c.8BD6B7C8DD58D5AE.idx  stm32h5xx_hal_pwr_ex.h.86F57427E847F416.idx  stm32h5xx_hal_rcc.c.2C0DA061964CB012.idx  stm32h5xx_hal_rcc.h.A27B699417D091CA.idx  (+18 more)
Core/Inc/: stm32h5xx_hal_conf.h
Core/Src/: main.c  stm32h5xx_hal_msp.c
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
tools/: plotter.py
